Embed required fonts for tests
So that they pass no matter what fonts are provided by the operating system.

--- a/ClosedXML.Tests/ClosedXML.Tests.csproj
+++ b/ClosedXML.Tests/ClosedXML.Tests.csproj
@@ -22,6 +22,7 @@
     <EmbeddedResource Include="**\*.xlsm" Exclude="**\~$*.xlsm;bin\**" />
     <EmbeddedResource Include="Resource\Images\*.png" />
     <EmbeddedResource Include="Resource\Images\*.jpg" />
+    <EmbeddedResource Include="Resource\Fonts\*" />
   </ItemGroup>
 
   <ItemGroup>
