--- a/ClosedXML/ClosedXML.nuspec
+++ b/ClosedXML/ClosedXML.nuspec
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <package>
   <metadata>
     <id>$id$</id>
@@ -14,12 +14,9 @@
     <tags>ClosedXML</tags>
   </metadata>
   <files>
-    <file src="bin\Release\net40\ClosedXML.dll" target="lib\net40\ClosedXML.dll" />
-    <file src="bin\Release\net40\ClosedXML.pdb" target="lib\net40\ClosedXML.pdb" />
-    <file src="bin\Release\net40\ClosedXML.xml" target="lib\net40\ClosedXML.xml" />
-    <file src="bin\Release\net46\ClosedXML.dll" target="lib\net46\ClosedXML.dll" />
-    <file src="bin\Release\net46\ClosedXML.pdb" target="lib\net46\ClosedXML.pdb" />
-    <file src="bin\Release\net46\ClosedXML.xml" target="lib\net46\ClosedXML.xml" />
+    <file src="bin\Release\net461\ClosedXML.dll" target="lib\net461\ClosedXML.dll" />
+    <file src="bin\Release\net461\ClosedXML.pdb" target="lib\net461\ClosedXML.pdb" />
+    <file src="bin\Release\net461\ClosedXML.xml" target="lib\net461\ClosedXML.xml" />
     <file src="bin\Release\netstandard2.0\ClosedXML.dll" target="lib\netstandard2.0\ClosedXML.dll" />
     <file src="bin\Release\netstandard2.0\ClosedXML.pdb" target="lib\netstandard2.0\ClosedXML.pdb" />
     <file src="bin\Release\netstandard2.0\ClosedXML.xml" target="lib\netstandard2.0\ClosedXML.xml" />
